# pcb

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRATE_SPLIT_COMPLETE.md  Cargo.toml  LLM.md  MIGRATION_0.2_to_0.3.md  README.md  THIRD_PARTY_NOTICES.md  board_config.zen  default_bom_profile.yaml  dist-workspace.toml  dist-workspace.toml.bak  flake.nix  install.ps1  install.sh  pcb.toml  pyproject.toml  rust-toolchain.toml
crates/gerberx2/: Cargo.toml  README.md
crates/gerberx2/src/: from_artwork.rs  intern.rs  lib.rs  parse.rs  write.rs
crates/gerberx2/src/geometry/: compare.rs  extract.rs  ir.rs  mod.rs  process.rs  raster.rs  svg.rs  terminal.rs
crates/gerberx2/src/types/: mod.rs
crates/gerberx2/tests/: basic.rs
crates/ipc-2581/: COPPER_LAYER_FIXES.md  COPPER_LAYER_TRACE_ACCURACY.md  Cargo.toml  IPC_2581_COPPER_LAYER_FEATURES.md  IPC_2581_PROCESSING_PIPELINE.md  README.md  ROOT_CAUSE_ANALYSIS.md  STAGE4_5_USAGE.md  STAGE4_COMPLETE.md  STAGE4_COMPLETE_FINAL.md  STAGE4_FINAL_SUMMARY.md  STAGE4_IMPROVEMENTS.md  STAGE4_VALIDATION.md  UNIFIED_FINAL_SUMMARY.md
crates/ipc-2581/src/: board_outline.rs  copper_layer.rs  geometry.rs  html_generator.rs  html_template.html  intern.rs  lib.rs  parse.rs
crates/ipc-2581/src/svg_export/: board_context.rs  debug.rs  mod.rs  primitives.rs  resolved_feature.rs  stage0.rs  stage1.rs  stage2.rs  stage3.rs  stage4.rs  stage4_5.rs  timing.rs
crates/ipc-2581/src/types/: bom.rs  dictionary.rs  ecad.rs  metadata.rs  mod.rs  primitives.rs
crates/ipc-2581/tests/: integration_test.rs  testcases.rs
crates/ipc-2581/tests/data/: DM0002-IPC-2518.xml
crates/ipc2581/: ARCHITECTURE.md  Cargo.toml  README.md
crates/ipc2581-tools/: Cargo.toml  README.md  dm0002.ipc2581.html
crates/ipc2581-tools/src/: board_outline.rs  debug.rs  geometry.rs  html_generator.rs  lib.rs  stage1.rs  stage4.rs  timing.rs
crates/ipc2581-tools/src/svg_export/: debug.rs  mod.rs  primitives.rs  resolved_feature.rs  stage1.rs  stage3.rs  stage4.rs
crates/ipc2581/src/: checksum.rs  edit.rs  intern.rs  lib.rs  parse.rs  units.rs  write.rs
crates/ipc2581/src/types/: avl.rs  bom.rs  content.rs  dictionary.rs  ecad.rs  metadata.rs  mod.rs  primitives.rs  transform.rs
crates/ipc2581/tests/: integration_test.rs  kicad_test.rs  step_repeat.rs  test_helpers.rs  testcases.rs  testcases.rs.bak
crates/ipc2581/tests/data/: DM0002-IPC-2518.xml.zst  SN0002-IPC-2518.xml.zst
crates/pcb-autoplace/: Cargo.toml
crates/pcb-autoplace/src/: lib.rs
crates/pcb-canonical/: Cargo.toml
crates/pcb-canonical/src/: lib.rs
crates/pcb-component/: Cargo.toml
crates/pcb-component-gen/: Cargo.toml
crates/pcb-component-gen/src/: lib.rs
crates/pcb-component-gen/templates/: component.zen.jinja
crates/pcb-component/src/: lib.rs
crates/pcb-diode-api/: Cargo.toml  README.md
crates/pcb-diode-api/src/: auth.rs  aws_auth.rs  bom.rs  component.rs  datasheet.rs  datasheet_resolve.rs  diode_uri.rs  download_support.rs  endpoint.rs  lib.rs  mcp.rs  order.rs  release.rs  routing.rs  sandbox.rs  scan.rs
crates/pcb-diode-api/src/kicad_symbols/: download.rs  mod.rs
crates/pcb-diode-api/templates/: component.zen.jinja
crates/pcb-diode-api/tests/: sandbox_data_plane.rs
crates/pcb-docgen/: Cargo.toml  README.md
crates/pcb-docgen/src/: lib.rs  main.rs  parser.rs  render.rs  signature.rs  types.rs
crates/pcb-docs/: Cargo.toml  build.rs
crates/pcb-docs/src/: lib.rs
crates/pcb-fmt/: Cargo.toml
crates/pcb-fmt/src/: lib.rs
crates/pcb-ipc2581-tools/: Cargo.toml  README.md
crates/pcb-ipc2581-tools/src/: board_array.rs  lib.rs  main.rs  panel.rs  placement.rs  steps.rs  xnc.rs
crates/pcb-ir/: Cargo.toml
crates/pcb-ir/src/: common.rs  lib.rs
crates/pcb-ir/src/geom/: mod.rs  (+2 more)
crates/pcb-kicad/: Cargo.toml
crates/pcb-kicad/src/: drc.rs  erc.rs  footprint.rs  lib.rs
crates/pcb-layout/: Cargo.toml  README.md
crates/pcb-layout/src/: effective_netlist.rs  fab_drawing.rs  kicad_project_patch.rs  lib.rs  model_embed_discovery.rs  moved.rs  repair_nets.rs  sync_check.rs
crates/pcb-layout/tests/: fpid_change.rs  helpers.rs  layout_check.rs  layout_generation.rs  moved.rs
crates/pcb-mcp/: Cargo.toml  README.md
crates/pcb-mcp/src/: aggregator.rs  codemoder.rs  discovery.rs  lib.rs  proxy.rs
crates/pcb-mechanical/: Cargo.toml
crates/pcb-mechanical/src/: datum.rs  idf.rs  lib.rs  locate.rs  mcad.rs  placement.rs
crates/pcb-registry/: Cargo.toml
crates/pcb-registry/src/: download.rs  lib.rs
crates/pcb-scan/: Cargo.toml
crates/pcb-scan/src/: lib.rs
crates/pcb-sch/: Cargo.toml  README.md
crates/pcb-sch/src/: bom.rs  bom_table.rs  hierarchical_layout.rs  kicad_netlist.rs  kicad_schematic.rs  lib.rs  natural_string.rs  physical.rs  position.rs  profile.rs
crates/pcb-sch/test/: kicad-bom.zen
crates/pcb-sexpr/: Cargo.toml
crates/pcb-sexpr/src/: board.rs  formatter.rs  lib.rs
crates/pcb-sim/: Cargo.toml
crates/pcb-sim/src/: lib.rs  ngspice.rs
crates/pcb-telem/: Cargo.toml  README.md
crates/pcb-telem/src/: lib.rs
crates/pcb-test-utils/: Cargo.toml
crates/pcb-test-utils/src/: sandbox.rs  snapdir.rs
crates/pcb-zen-core/: Cargo.toml
crates/pcb-zen-core/src/: bundle.rs  config.rs  convert.rs  core_load_resolver_tests.rs  diagnostics.rs  embedded_stdlib.rs  erc.rs  file_provider.rs  kicad_library.rs  lib.rs  load_spec.rs  moved.rs  passes.rs  resolution.rs  stdlib.rs  warnings.rs  workspace.rs
crates/pcb-zen-core/tests/: assert.rs  binding.rs  component.rs  component_footprint_inference.rs  core_load_resolver.rs  cross_package_load.rs  designator.rs  enum_component_properties.rs  file.rs  input.rs  interface.rs  load.rs  name_inference.rs  net.rs  not_connected.rs  part.rs  refdes.rs  shared_session.rs  spice_model.rs  symbol.rs  test.rs
crates/pcb-zen-wasm/: Cargo.toml  README.md
crates/pcb-zen-wasm/scripts/: eval-publish-bundle.mjs
crates/pcb-zen-wasm/src/: lib.rs  main.rs
kicad-sym/: .gitignore  README.md  pyproject.toml
kicad-sym/src/kicad_sym/: __init__.py
kicad-sym/tests/: test_kicad_sym.py
(+1647 files in other folders)
