[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "kicad-sym"
version = "0.4.0"
description = "Python helper for KiCad symbol S-expressions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Diode" },
]
keywords = ["kicad", "eda", "symbols", "sexpr", "pcb"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/diodeinc/pcb"
Repository = "https://github.com/diodeinc/pcb"
Issues = "https://github.com/diodeinc/pcb/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_sym"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
