[package]
name = "ipc-2581"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "ipc2581"
path = "src/bin/main.rs"

[dependencies]
roxmltree = "0.20"
bumpalo = "3.16"
md-5 = "0.10"
base64 = "0.22"
thiserror = "2.0"
rustc-hash = "2.1"
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
svg = "0.18.0"
kurbo = "0.12.0"
zstd = "0.13"
lyon_tessellation = "1.0"
lyon_path = "1.0"
lyon_algorithms = "1.0"
minijinja = "2.6"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
walkdir = "2.5"
