[package]
name = "ipc2581-tools"
version = "0.3.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Visualization, rendering, and export tools for IPC-2581 documents"
license = "MIT OR Apache-2.0"
keywords = ["pcb", "ipc-2581", "visualization", "svg", "rendering"]
categories = ["visualization", "graphics", "command-line-utilities"]

[[bin]]
name = "ipc2581"
path = "src/bin/main.rs"

[dependencies]
# Pure parser
ipc2581 = { path = "../ipc2581", version = "0.3" }

# Export/visualization dependencies
base64 = "0.22"
bumpalo = "3.16"
clap = { version = "4.5", features = ["derive"] }
svg = "0.18.0"
kurbo = "0.12.0"
zstd = "0.13"
lyon_tessellation = "1.0"
lyon_path = "1.0"
lyon_algorithms = "1.0"
skia-safe = "0.80"
minijinja = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo = "0.31"
