[package]
name = "pcb-component-gen"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Generate Zener component modules from EDA artifacts"

[dependencies]
anyhow = { workspace = true }
deunicode = { workspace = true }
minijinja = { workspace = true }
pcb-eda = { workspace = true }
serde_json = { workspace = true }
