[package]
name = "pcb-component"
version = { workspace = true }
edition = { workspace = true }
description = "Component search and download functionality"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
colored = { workspace = true }
