[package]
name = "pcb-diode-api"
version = { workspace = true }
edition = { workspace = true }
description = "Diode API client for authentication, component search, and PDF scanning"

[dev-dependencies]
insta = { workspace = true }

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
urlencoding = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
pcb-eda = { workspace = true }
inquire = { workspace = true }
indicatif = { workspace = true }
unicode-width = { workspace = true }
terminal_size = { workspace = true }
clap = { workspace = true }
pcb-zen-core = { workspace = true }
pcb-zen = { workspace = true }
pcb-kicad = { workspace = true }
pcb-sch = { workspace = true }
deunicode = { workspace = true }
minijinja = { workspace = true }
zstd = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
fslock = { workspace = true }
pcb-mcp = { workspace = true }
walkdir = { workspace = true }
terminal_hyperlink = { workspace = true }
supports-hyperlinks = { workspace = true }
