[package]
name = "pcb-docgen"
version = "0.1.0"
edition = "2021"
description = "Generate documentation from Zener source files"

[dependencies]
anyhow = "1"
pcb-zen = { path = "../pcb-zen" }
pcb-zen-core = { path = "../pcb-zen-core" }
starlark = { workspace = true }
starlark_syntax = { workspace = true }
walkdir = "2"
