[package]
name = "pcb-ipc2581"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
axoupdater = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
env_logger = { workspace = true }
ipc2581 = { workspace = true }
log = { workspace = true }
pcb-sch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starlark_syntax = { workspace = true }
zstd = "0.13"
