[package]
name = "pcb-ir"
version = "0.3.82"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Intermediate representations, geometry passes, and renderers for PCB fabrication data"
license = "MIT OR Apache-2.0"
keywords = ["pcb", "gerber", "ipc-2581", "geometry", "eda"]
categories = ["graphics", "rendering", "hardware-support"]

[dependencies]
base64 = { workspace = true }
i_overlay = { workspace = true }
kurbo = { workspace = true }
resvg = { workspace = true }
terminal_size = { workspace = true }
