[package]
name = "pcb-kicad"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "KiCad integration for PCB design tools"

[dependencies]
hex = { workspace = true }
anyhow = { workspace = true }
atomicwrites = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
pcb-sexpr = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
pcb-command-runner = { workspace = true }
pcb-zen-core = { workspace = true }
sha2 = { workspace = true }
starlark = { workspace = true }
zstd = { workspace = true }
