[package]
name = "pcb-mcp"
version = { workspace = true }
edition = { workspace = true }
description = "Model Context Protocol (MCP) server implementation"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true, features = ["serde"] }
rpc-router = "0.1.3"
signal-hook = "0.3"
