[package]
name = "pcb-mechanical"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Mechanical CAD ingestion and placement resolution for PCB designs"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
pcb-sch = { workspace = true }
pcb-zen-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
