[package]
name = "pcb-registry"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
crossterm.workspace = true
dirs.workspace = true
ratatui.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tui-textarea.workspace = true
