[package]
name = "pcb-registry"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
crossterm.workspace = true
dirs.workspace = true
fslock.workspace = true
image.workspace = true
ratatui.workspace = true
ratatui-image.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tui-textarea.workspace = true
