[package]
name = "pcb-scan"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "PDF datasheet scanning with OCR"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
colored = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
