[package]
name = "pcb-sexpr"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "S-expression parser for PCB file formats"

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
ruzstd = { workspace = true }
serde = { workspace = true, optional = true }
sha2 = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
