[package]
name = "pcb-sim"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Spice simulation setup from PCB schematic"

[dependencies]
anyhow = { workspace = true }
pcb-sch = { workspace = true }
pcb-command-runner = { workspace = true }
dirs = { workspace = true }
itertools = { workspace = true }
pcb-zen-core = { workspace = true }
