[package]
name = "pcb-zen-core"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Core functionality for Zen PCB design language"

[features]
default = ["native"]
native = [
    "reqwest",
    "dirs",
    "tar",
    "walkdir",
    "rayon",
    "dep:pcb-canonical",
]
wasm = ["getrandom/js", "dep:getrandom"]
table = ["pcb-sch/table"]

[dependencies]
dupe = { workspace = true }
allocative = { workspace = true }
derive_more = { workspace = true }

starlark = { workspace = true }
starlark_map = { workspace = true }
starlark_derive = { workspace = true }
starlark_syntax = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
either = { workspace = true }
globset = { workspace = true }
itertools = { workspace = true }
heck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
log = { workspace = true }
regex = { workspace = true }
ariadne = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
toml = { workspace = true }
zip = { workspace = true }
fixedbitset = { workspace = true }
smallvec = { workspace = true }
rust_decimal = { workspace = true }
pcb-eda = { workspace = true }
pcb-sch = { workspace = true }
pcb-sexpr = { workspace = true }
pcb-canonical = { workspace = true, optional = true }
tracing = { workspace = true }
rayon = { workspace = true, optional = true }
include_dir = "0.7.4"

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
