[package]
name = "pcb-zen-wasm"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "WebAssembly bindings for Zen PCB design language"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pcb-zen-wasi"
path = "src/main.rs"

[dependencies]
pcb-zen-core = { workspace = true, features = ["wasm"] }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
starlark = { workspace = true }
zip = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
